Tweaking the error recovery.